Fix heading text color readability

--- a/styles.css
+++ b/styles.css
@@ -4,7 +4,7 @@ body {
 
 h1 {
     background-color: #0f1bba;
-    color: rgb(203, 203, 219);
+    color: aliceblue;
     text-align: center;
 }
 
